# kafka-operator

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.adoc  README.md  README_v1.md  crate-hashes.json  deny.toml  test.yaml  test2.yaml
.ci/integration-tests/aws-eks/: cluster.yaml  test.sh
.ci/integration-tests/azure-aks/: cluster.yaml
.ci/integration-tests/hcloud-centos-8/: cluster.yaml
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  build_artifacts.yml  build_multiarch.yml  docker.yml  nightly.yml  pr_pre-commit.yaml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  rust.yml
.readme/: README.md.j2  notes
.readme/partials/: main.md  main.md.j2
.readme/partials/borrowed/: documentation.md.j2  footer.md  footer.md.j2  header.md  links.md
crd/: Cargo.toml  kafkaclusters.crd.yaml
crd/src/: error.rs  lib.rs  main.rs
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: kafkacluster.crd.yaml  restart.crd.yaml  start.crd.yaml  stop.crd.yaml
deploy/helm/kafka-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/kafka-operator/configs/: properties.yaml
deploy/helm/kafka-operator/crds/: crds.yaml
deploy/helm/kafka-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  deployment.yaml  roles-kafka.yaml  roles.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles-kafka.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.4.0/manifests/: configmap.yaml  deployment.yaml  roles-kafka.yaml  roles.yaml  stackable-kafka-operator.clusterserviceversion.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  config_properties.adoc  configuration.adoc  discovery.adoc  env_var_args.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/kafka/: nav.adoc
docs/modules/kafka/pages/: commandline_args.adoc  config_properties.adoc  dependencies.adoc  env_var_args.adoc  index.adoc  usage.adoc
docs/modules/kafka/partials/: nav.adoc  supported-versions.adoc
examples/: restart.command.example.yaml  simple-kafka-cluster.yaml  simple-kafkacluster.yaml  start.command.example.yaml  stop.command.example.yaml
examples/kraft-migration/: 01-setup.yaml  02-start-controllers.yaml  03-migrate-metadata.yaml  04-migrate-brokers.yaml  05-kraft-mode.yaml
examples/logging/: simple-kafka-cluster-opa-log4j.yaml
examples/opa/: simple-kafka-cluster-opa-allow-all.yaml  simple-kafka-cluster-opa.yaml
examples/tls/: simple-kafka-cluster-tls.yaml  simple-kafka-cluster.yaml
extra/: crds.yaml
nix/: meta.json
operator/: Cargo.toml
operator/src/: error.rs  kafkaclusters.crd.yaml  lib.rs  pod_utils.rs
packaging/: buildrpm.sh  copy_assets.py
packaging/debian/: stackable-kafka-operator.service
packaging/rpm/SPECS/: stackable-kafka-operator.spec
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  authentication.rs  authorization.rs  commands.rs  error.rs  lib.rs  listener.rs  security.rs  tls.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: controller.rs  discovery.rs  framework.rs  kafka_controller.rs  kerberos.rs  main.rs  pod_svc_controller.rs  product_logging.rs  stackable-kafka-operator.rs  utils.rs
rust/operator-binary/src/config/: command.rs  jvm.rs  mod.rs  node_id_hasher.rs
rust/operator-binary/src/controller/: dereference.rs  mod.rs  node_id_hasher.rs  security.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  authentication.rs  authorization.rs  config_file.rs  listener.rs  mod.rs  security.rs  tls.rs
rust/operator-binary/src/crd/role/: broker.rs  commons.rs  controller.rs  mod.rs
rust/operator-binary/src/framework/: role_utils.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  pdb.rs
rust/operator-binary/src/resource/: configmap.rs  listener.rs  mod.rs  service.rs  statefulset.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator-lib/: Cargo.toml
rust/operator/packaging/: buildrpm.sh  copy_assets.py
rust/operator/src/: command.rs  discovery.rs  error.rs  kafka_controller.rs  lib.rs  main.rs  pod_svc_controller.rs  product_logging.rs  rbac.rs  utils.rs
rust/operator/src/operations/: graceful_shutdown.rs  pdb.rs
scripts/: docs_templating.sh  ensure_one_trailing_newline.py  generate-manifests.sh  render_readme.sh
server/: Cargo.toml  build.rs
server/debian/: service
server/packaging/rpm/SOURCES/stackable-kafka-operator-server-VERSION/usr/lib/systemd/system/: stackable-kafka-operator-server.service
server/src/: main.rs
src/: crd.rs  main.rs
tests/: infrastructure.yaml  kuttl-test.yaml.jinja2  release.yaml  test-definition.yaml
tests/templates/kuttl/cluster-operation/: 10-assert.yaml.j2  20-assert.yaml.j2  20-install-kafka.yaml.j2  30-assert.yaml  30-assert.yaml.j2  30-stop-kafka.yaml.j2  40-assert.yaml  40-assert.yaml.j2  40-pause-kafka.yaml.j2  50-assert.yaml  50-assert.yaml.j2  50-restart-kafka.yaml.j2  90-shutdown-kafka.yaml
tests/templates/kuttl/configuration/: 00-install-zk.yaml.j2  01-assert.yaml  01-install-kafka.yaml.j2  01-install-zk.yaml.j2  02-assert.yaml.j2  02-install-kafka.yaml.j2  10-assert.yaml.j2  10-install-kafka.yaml.j2  10-install-zk.yaml.j2  20-assert.yaml.j2  20-install-kafka.yaml.j2
tests/templates/kuttl/delete-rolegroup/: 00-assert.yaml  00-install-zk.yaml.j2  01-assert.yaml  01-install-kafka.yaml.j2  01-install-zk.yaml.j2  02-assert.yaml  02-assert.yaml.j2  02-delete-secondary.yaml.j2  02-errors.yaml  02-install-kafka.yaml.j2  03-assert.yaml.j2  03-delete-secondary.yaml.j2  03-errors.yaml  03-errors.yaml.j2  90-shutdown-kafka.yaml
(+213 files in other folders)
