[workspace]
members = [
    "rust/crd", "rust/operator", "rust/operator-binary"
]

[patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { path = "/home/sbernauer/stackabletech/operator-rs" }
stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feature/secret-format" }

[patch."https://github.com/stackabletech/product-config.git"]
product-config = { git = "https://github.com/stackabletech//product-config.git", branch = "bugfix/java-property-empty-string" }