[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Kafka - The Custom Resource Definition"
edition = "2018"
license = "OSL-3.0"
name = "stackable-kafka-crd"
version = "0.1.0-nightly"

[dependencies]
stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch="main" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch = "main"}

k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"]  }
kube = { version = "0.52", default-features = false, features = ["jsonpatch", "derive"] }
kube-runtime = "0.52"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Needed by the CustomResource annotation
serde_yaml = "0.8"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
rstest = "0.10"

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
