[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Kafka - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-kafka-operator"
version = "0.1.0-nightly"

[dependencies]
stackable-kafka-crd = { path = "../crd" }
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "adapt_to_operator-rs_and_upd_to_kube_0.57" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "adapt_to_product_config_interface" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch="config" }

async-trait = "0.1"
futures = "0.3"
handlebars = "4.0"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }
kube = { version = "0.57", default-features = false, features = ["jsonpatch"] }
kube-runtime = "0.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tokio = { version = "1.7", features = ["macros"] }
tracing = "0.1"
