[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Kafka - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-kafka-operator"
version = "0.1.0-nightly"

[dependencies]
stackable-kafka-crd = { path = "../crd" }
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "adapt_to_operator_rs_build_resource_name_and_create_config_map" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "add_create_config_maps_with_labels" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch="adapt_to_operator_pod_name_and_create_config_map" }

async-trait = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.12", default-features = false }
kube = { version = "0.58", default-features = false, features = ["jsonpatch"] }
kube-runtime = "0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tokio = { version = "1.10", features = ["macros"] }
tracing = "0.1"
