[package]
name = "stackable-kafka-operator-server"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch="main" }
stackable-kafka-crd = { path = "../crd" }
stackable-kafka-operator = { path = "../operator" }

tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-kafka-operator-server", "opt/stackable/kafka-operator/", "755"],
]