[package]
name = "stackable-kafka-operator-server"
description = "Stackable Kafka Operator"
version = "0.1.0-nightly"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch="main" }
stackable-kafka-crd = { path = "../crd" }
stackable-kafka-operator = { path = "../operator" }

tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-kafka-operator-server", "opt/stackable/kafka-operator/", "755"],
]