[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Kafka - The main binary"
edition = "2018"
license = "OSL-3.0"
name = "stackable-kafka-operator-server"
version = "0.1.0-nightly"

[dependencies]
stackable-kafka-crd = { path = "../crd" }
stackable-kafka-operator = { path = "../operator" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "adapt_to_product_config_interface" }

serde_yaml = "0.8"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-kafka-operator-server", "opt/stackable/kafka-operator/", "755"],
]
