[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Kafka - The Custom Resource Definition"
edition = "2021"
license = "OSL-3.0"
name = "stackable-kafka-crd"
repository = "https://github.com/stackabletech/kafka-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.33.0" }

semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
snafu = "0.7.4"
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
serde_yaml = "0.9"
