[package]
name = "stackable-kafka-operator-binary"
description = "Stackable Operator for Apache Kafka"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-kafka-crd = { path = "../crd" }
stackable-kafka-operator = { path = "../operator" }

clap.workspace = true
stackable-operator.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true

[[bin]]
name = "stackable-kafka-operator"
path = "src/stackable-kafka-operator.rs"
