[package]
name = "stackable-kafka-operator"
description = "Stackable Operator for Apache Kafka"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-kafka-crd = { path = "../crd" }

clap.workspace = true
futures.workspace = true
product-config.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[build-dependencies]
built.workspace = true

[[bin]]
name = "stackable-kafka-operator"
path = "src/main.rs"
