[package]
name = "stackable-kafka-operator"
description = "Stackable Operator for Apache Kafka"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-versioned.workspace = true
stackable-operator.workspace = true
product-config.workspace = true

indoc.workspace = true
anyhow.workspace = true
clap.workspace = true
const_format.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
rstest.workspace = true

[build-dependencies]
built.workspace = true

[[bin]]
name = "stackable-kafka-operator"
path = "src/main.rs"
