[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Kafka - The Operator Library"
edition = "2021"
license = "OSL-3.0"
name = "stackable-kafka-operator"
repository = "https://github.com/stackabletech/kafka-operator"
version = "23.7.0"
publish = false

[dependencies]
stackable-kafka-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.44.0" }

futures = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros"] }
tracing = "0.1.37"
snafu = "0.7.4"

[dev-dependencies]
serde_yaml = "0.9"
