[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Kafka - The Operator Library"
edition = "2021"
license = "OSL-3.0"
name = "stackable-kafka-operator"
repository = "https://github.com/stackabletech/kafka-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-kafka-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.45.1" }

futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.28", features = ["macros"] }
tracing = "0.1"
snafu = "0.7"

[dev-dependencies]
serde_yaml = "0.9"
