[package]
name = "stackable-kafka-operator"
description = "Stackable Operator for Apache Kafka - The Operator Library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-kafka-crd = { path = "../crd" }

futures.workspace = true
serde.workspace = true
serde_json.workspace = true
stackable-operator.workspace = true
product-config.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
snafu.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
